# Category

./: LICENSE  README.md  setup.cfg
category/: abstract_models.py  admin.py  app_settings.py  models.py  permissions.py  serializers.py  urls.py  views.py
category/migrations/: 0001_initial.py
