[metadata]
name = friendship
version = 0.1
description = A reusable Django app
long_description = file: README.md
long_description_content_type = text/markdown
author = HIGHPOLAR SOFTWARES
author_email = your.email@example.com
license = MIT
url = https://github.com/pandeykamlesh26/Category.git
classifiers =
    Programming Language :: Python :: 3
    Framework :: Django
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = true
install_requires =
    django>=3.0
    djangorestframework>=3.12

[options.packages.find]
where = .
